--- a/hello_world.html
+++ b/hello_world.html
@@ -1,7 +1,7 @@
 <html>
   <title> Olá Mundo 
-   <\title>
+   </title>
       <body>
-        Hello World!>
-       <\body>
-<\html>
+        Hello World!
+       </body>
+</html>
